// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getClasses appends other classes provided 1`] = `"hard background--light-primary test test2"`;

exports[`getClasses returns default classes 1`] = `"hard background--light-primary"`;

exports[`renders with an image 1`] = `
<section
  className="hard background--light-primary"
  data-status-scroll-item={true}
  style={
    Object {
      "transition": "0.7s margin",
    }
  }
>
  <div
    className="one-whole ratio--square ratio--landscape@palm-wide background--fill"
    style={
      Object {
        "backgroundImage": "url('http://test.com/1x1.jpg')",
      }
    }
  />
  <div
    className="soft soft-double@palm-wide-and-up push-top"
  >
    <h2
      className="capitalize"
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>devotion</h1>",
        }
      }
    />
  </div>
  <Apollo(Connect(Template))
    excludedIds={
      Array [
        undefined,
      ]
    }
    tags={Array []}
  />
</section>
`;

exports[`renders with scripture 1`] = `
<section
  className="hard background--light-primary"
  data-status-scroll-item={true}
  style={
    Object {
      "transition": "0.7s margin",
    }
  }
>
  <div
    className="one-whole ratio--square ratio--landscape@palm-wide background--fill"
    style={
      Object {
        "backgroundImage": "url('http://test.com/1x1.jpg')",
      }
    }
  />
  <div
    className="soft soft-double@palm-wide-and-up push-top"
  >
    <h2
      className="capitalize"
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>devotion</h1>",
        }
      }
    />
  </div>
  <Apollo(Connect(Template))
    excludedIds={
      Array [
        undefined,
      ]
    }
    tags={Array []}
  />
</section>
`;

exports[`renders without images or scripture 1`] = `
<section
  className="hard background--light-primary"
  data-status-scroll-item={true}
  style={
    Object {
      "transition": "0.7s margin",
    }
  }
>
  <div
    className="soft soft-double@palm-wide-and-up push-top"
  >
    <h2
      className="capitalize"
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>devotion</h1>",
        }
      }
    />
  </div>
  <Apollo(Connect(Template))
    excludedIds={
      Array [
        undefined,
      ]
    }
    tags={Array []}
  />
</section>
`;
